msg/async: fix IP inference

socket_addr is *our* socket address; target_addr is the remote peer's
socket address.  We are inferring the remote's IP address here.

Fixes: http://tracker.ceph.com/issues/37882
Signed-off-by: Sage Weil <sage@redhat.com>